@@ -1,3 +1,8 @@
+2017-10-09  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/scripts/try_xpath_functions.js:
+	Modify getFrameAncestry function.
+
 2017-10-08  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/scripts/try_xpath_content.js:
